# LearningPathV2

./: .gitignore  embedding_similarity.py  infer_logits.py  main.ipynb  main.py  pyproject.toml  utils.py
data/: data_wiki_augument.py  fix_data.py  output_testing_en.json  output_testing_zh.json  testing.json
utils/: custom.py  embedding_similarity.py  utils.py
