[project]
name = "embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.1.3",
    "ruff>=0.11.5",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
    "tf-keras>=2.19.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "wikipedia>=1.4.0",
]
